--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
 	<span>o</span>
 	<span>m</span>
 	<span>e</span>
+	<span> </span>
+	<span>w</span>
+	<span>e</span>
+	<span>b</span>
+	<span>s</span>
+	<span>i</span>
+	<span>t</span>
+	<span>e</span>
 </h1>
 <!-- partial -->
   
