launch msg update

--- a/index.html
+++ b/index.html
@@ -8,25 +8,12 @@
 
 </head>
 <body>
-<!-- partial:index.partial.html -->
-<h1>
-	<span>w</span>
-	<span>e</span>
-	<span>l</span>
-	<span>c</span>
-	<span>o</span>
-	<span>m</span>
-	<span>e</span>
-	<span> </span>
-	<span>w</span>
-	<span>e</span>
-	<span>b</span>
-	<span>s</span>
-	<span>i</span>
-	<span>t</span>
-	<span>e</span>
-</h1>
-<!-- partial -->
+<div>
+	<!-- <img src="1.jpeg"> -->
+</div>
+<div>
+	<h3><span>Official Website Launch on 2o August. <p>Stay Tuned </p></span></h3>
+</div>
   
 </body>
 </html>
